--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -5,13 +5,22 @@
     <data>
 
         <variable
-            name="viewModel"
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="model"
             type="com.example.doordashlite.data.Store" />
+
+        <variable
+            name="viewModel"
+            type="com.example.doordashlite.ui.MainViewModel"/>
     </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{(v) -> viewModel.onItemClick(position)}"
         android:layout_marginBottom="1dp">
 
         <LinearLayout
@@ -21,9 +30,10 @@
             android:padding="10dp">
 
             <com.facebook.drawee.view.SimpleDraweeView
-                android:layout_width="30dp"
-                android:layout_height="100dp"
-                android:scaleType="center"
+                android:layout_width="140dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                android:layout_gravity="center"
                 android:id="@+id/ivImage"/>
 
             <LinearLayout
@@ -35,18 +45,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#000"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:id="@+id/tvRestaurantName"
-                    android:text="@{viewModel.name}"/>
+                    android:text="@{model.name}"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
+                    android:textSize="10sp"
                     android:id="@+id/tvRestaurantFood"
                     android:layout_marginTop="10dp"
-                    android:text="@{viewModel.description}"/>
+                    android:text="@{model.description}"/>
             </LinearLayout>
 
 
@@ -56,7 +66,7 @@
                 android:textSize="16sp"
                 android:id="@+id/tvStatus"
                 android:layout_marginTop="10dp"
-                android:text="@{viewModel.closeTime}"/>
+                android:text="@{model.getCloseTime()}"/>
 
         </LinearLayout>
 
