--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -18,26 +19,29 @@
         android:id="@+id/detailsView">
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/restaurantLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/restaurantLayout">
+            android:orientation="vertical">
 
             <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/ivCover"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:scaleType="centerCrop"
-                android:layout_gravity="center"
-                android:id="@+id/ivCover"/>
+                android:layout_height="120dp"
+                android:layout_gravity="center|top"
+                fresco:actualImageScaleType="fitCenter"/>
 
             <TextView
+                android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{model.name}"/>
+                android:text="--" />
 
             <TextView
+                android:id="@+id/tvDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{model.description}"/>
+                android:text="--" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
